--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@qinsx/ant-design-vue": "^1.7.9",
+    "ant-design-vue": "^1.7.8",
     "core-js": "^3.8.3",
     "store": "^2.0.12",
     "vue": "^2.6.14",
