--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@qinsx/ant-design-vue": "^1.7.9",
     "ant-design-vue": "^1.7.8",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "store": "^2.0.12",
     "vue": "^2.6.14",
@@ -43,6 +44,7 @@
     "jest": "^27.0.5",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
+    "mockjs": "^1.1.0",
     "ts-jest": "^27.0.4",
     "typescript": "~4.5.5",
     "vue-template-compiler": "^2.6.14"
