--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "svgo": "svgo -f src/components/SvgIcon/icons --config=src/components/SvgIcon/svgo.yml",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@qinsx/ant-design-vue": "^1.7.9",
-    "ant-design-vue": "^1.7.8",
+    "@qinsx/ant-design-vue": "^1.7.10",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "store": "^2.0.12",
+    "svg-sprite-loader": "^6.0.11",
+    "svgo": "^1.3.2",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
