--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@qinsx/ant-design-vue": "^1.7.10",
+    "@qinsx/ant-design-vue": "^1.7.11",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "store": "^2.0.12",
@@ -45,11 +45,13 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
-    "less": "^4.0.0",
+    "less": "^3.13.1",
     "less-loader": "^8.0.0",
     "mockjs": "^1.1.0",
+    "style-resources-loader": "^1.5.0",
     "ts-jest": "^27.0.4",
     "typescript": "~4.5.5",
+    "vue-cli-plugin-style-resources-loader": "^0.1.5",
     "vue-template-compiler": "^2.6.14"
   }
 }
